# domain-explorer

./: .env.example  .gitignore  LICENSE  NOTES.md  READ-ME-FIRST.txt  README.md  _sync_probe.txt  commit-and-push.bat  demo-init.bat  demo-prep.ps1  demo-prep.sh  lefthook.yml  package-zip.ps1  package.json  pnpm-lock.yaml  pyproject.toml  setup-and-run.bat  setup-and-run.sh
.github/workflows/: ci.yml
apps/explorer-web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
data/: canned-answers.json
data/connectors/: connectors.yaml
data/glossary/: glossary.yaml
data/kpis/: kpis.yaml  master.yaml  sql.yaml
data/quality/: data-availability.yaml  dq_rules.yaml  last_run.json
data/source-systems/: sources.yaml
data/taxonomy/: actuarial_pricing.yaml  ad_inventory.yaml  ad_tech.yaml  agentic_commerce.yaml  airline_disruption.yaml  airline_loyalty.yaml  airline_revenue_management.yaml  asset_health_monitoring.yaml  asset_management.yaml  audit_workflow.yaml  baggage_tracking.yaml  bench_management.yaml  benefits_administration.yaml  bill_of_materials.yaml  brand_marketing.yaml  bss_oss.yaml  capital_markets.yaml  carbon_accounting.yaml  cards.yaml  category_management.yaml  chip_design_eda.yaml  churn_management.yaml  claims_subrogation.yaml  clinical_decision_support.yaml  clinical_trials.yaml  cloud_finops.yaml  content_metadata.yaml  contract_management.yaml  court_records.yaml  cross_border_payments.yaml  customer_analytics.yaml  customer_care.yaml  customer_loyalty_cdp.yaml  dark_stores.yaml  defense_logistics.yaml  demand_planning.yaml  developer_relations.yaml  device_telemetry.yaml  direct_store_delivery.yaml  ecommerce.yaml  (+88 more)
docs/architecture/: 0001-stack-choices.md
docs/blueprint/: README.md
docs/research/: data-availability-audit.md
kg/: README.md  build_graph.py  graph.json
kg/cypher/: 01_subdomains_for_vertical.cypher  02_kpis_for_subdomain.cypher  03_source_systems_for_subdomain.cypher  04_kpi_to_decision_chain.cypher  README.md
kg/ontology/: README.md  domain_explorer.ttl
modeling/dbt/: README.md  dbt_project.yml  package-lock.yml  profiles.yml
modeling/ddl/: README.md  agentic_commerce_3nf.sql  agentic_commerce_dim.sql  agentic_commerce_vault.sql  capital_markets_3nf.sql  (+86 more)
screenshots/: README.md  shoot.js  verify-assistant.js  verify-assistant.json
scripts/: backfill_entities.py  dq_snapshot.py  gen_new_subdomains.py
services/api/: pyproject.toml
services/api/app/: __init__.py  dq.py  kg.py  main.py
services/api/tests/: test_dq.py  test_kg.py
synthetic-data/: README.md  common.py  generate_all.py  load_to_postgres.py  postgres_schema.sql  pyproject.toml
synthetic-data/agentic_commerce/: generate.py  load_to_duckdb.py
synthetic-data/capital_markets/: generate.py
synthetic-data/category_management/: generate.py  load_to_duckdb.py
synthetic-data/clinical_trials/: generate.py
synthetic-data/cloud_finops/: generate.py
synthetic-data/customer_loyalty_cdp/: generate.py  load_to_duckdb.py
synthetic-data/demand_planning/: generate.py
synthetic-data/direct_store_delivery/: generate.py  load_to_duckdb.py
synthetic-data/ehr_integrations/: generate.py
synthetic-data/ev_charging/: generate.py
synthetic-data/hotel_revenue_management/: generate.py
synthetic-data/loss_prevention/: generate.py  load_to_duckdb.py
synthetic-data/merchandising/: generate.py
synthetic-data/mes_quality/: generate.py
synthetic-data/omnichannel_oms/: generate.py  load_to_duckdb.py
synthetic-data/p_and_c_claims/: generate.py
synthetic-data/payments/: generate.py
synthetic-data/pharmacovigilance/: generate.py
synthetic-data/predictive_maintenance/: generate.py  load_to_duckdb.py
synthetic-data/pricing_and_promotions/: generate.py  load_to_duckdb.py
synthetic-data/procurement_spend_analytics/: generate.py  load_to_duckdb.py
synthetic-data/programmatic_advertising/: generate.py
synthetic-data/real_world_evidence/: generate.py
synthetic-data/returns_reverse_logistics/: generate.py  load_to_duckdb.py
synthetic-data/revenue_growth_management/: generate.py  load_to_duckdb.py
synthetic-data/settlement_clearing/: generate.py
synthetic-data/smart_metering/: generate.py
synthetic-data/sop_supply_chain_planning/: generate.py  load_to_duckdb.py
synthetic-data/synthetic_data/: __init__.py
synthetic-data/tax_administration/: generate.py
synthetic-data/tests/: test_generators.py
synthetic-data/trade_promotion_management/: generate.py  load_to_duckdb.py
tools/: build_kpi_master.py  validate_agentic_commerce.mjs  validate_pricing_and_promotions.mjs
(+747 files in other folders)
