[project]
name = "domain-explorer"
version = "0.1.0"
description = "Metadata-driven explorer monorepo (Python workspace root)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vinayak Pai", email = "kvinayakpai@gmail.com" }]

[tool.uv.workspace]
members = [
  "services/api",
  "synthetic-data",
  "packages/metadata/python",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "modeling/dbt/target",
  "**/.venv",
  # NOTE: synthetic-data/payments/generate.py is corrupted on this mount;
  # tracked in NOTES.md. Skip it from ruff until it's regenerated.
  "synthetic-data/payments/generate.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# N815 / N802: schema fields (and the tests that reference them) intentionally
#              mirror the YAML keys, which use camelCase to match the TS Zod schema.
# UP042:       pydantic enums inherit from str+Enum on purpose for serialization.
# UP017:       we keep `datetime.timezone.utc` for compatibility with Python <3.11
#              dev environments.
ignore = ["E501", "N815", "N802", "UP042", "UP017"]

[tool.ruff.lint.per-file-ignores]
"synthetic-data/**/generate.py" = ["F841"]  # unused `f = ctx.faker` aliases

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["modeling/dbt/target", ".venv"]

[tool.pytest.ini_options]
testpaths = [
  "packages/metadata/python/tests",
  "services/api/tests",
  "synthetic-data/tests",
]
pythonpath = [
  "packages/metadata/python",
  "services/api",
  "synthetic-data",
  ".",
]
addopts = "-q --color=yes -m 'not slow' --import-mode=importlib"
markers = [
  "slow: long-running synthetic-data generator runs",
]
