[project]
name = "domain-explorer-api"
version = "0.1.0"
description = "FastAPI service exposing the Domain Explorer metadata registry."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "duckdb>=1.0",
  "domain-explorer-metadata",
]

[tool.uv.sources]
domain-explorer-metadata = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
pa